add playlist preface/followups

--- a/src/data_versioning/data-versioning/.dvc/config
+++ b/src/data_versioning/data-versioning/.dvc/config
@@ -1,8 +1,4 @@
 [core]
-    remote = prompts.txt
-['remote "cheese_dataset"']
-    url = gs://chse-app-data-versioning/dvc_store
+    remote = prompt_playlist_data
 ['remote "prompt_playlist_data"']
-    url = gs://prompt-playlist-data/dvc_store
-['remote "prompts.txt"']
     url = gs://prompt-playlist-data/dvc_store
