--- a/src/datapipeline/Pipfile
+++ b/src/datapipeline/Pipfile
@@ -17,6 +17,8 @@ vertexai = "*"
 langchain = "*"
 agent_tools = "*"
 user-agent = "*"
+gcsfs = "*"
+langchain-community = "*"
 
 [requires]
 python_version = "3.11"
