well at least something runs

--- a/src/datapipeline/Dockerfile
+++ b/src/datapipeline/Dockerfile
@@ -38,7 +38,6 @@ RUN set -ex; \
 USER app
 WORKDIR /app
 
-
 # Install python packages
 ADD --chown=app:app Pipfile Pipfile.lock /app/ 
     ##Pipfile.lock
@@ -50,12 +49,7 @@ RUN pipenv sync
 
 # Add the rest of the source code. This is done last so we don't invalidate all
 # layers when we change a line of code.
-ADD --chown=app:app . /app/
-
-ADD docker-entrypoint.sh /app
-#RUN chmod +x ./docker-entrypoint.sh
-
+ADD --chown=app:app . /app
 
 # Entry point
-ENTRYPOINT ["/bin/bash"]
-#,"./docker-entrypoint.sh"]
+ENTRYPOINT ["/bin/bash","./docker-entrypoint.sh"]
