--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 #ignore DS store to avoid computer-specific version pull/push issues
 .DS_Store
+/src/datapipeline/docker-volumes/chromadb
+src/datapipeline/docker-volumes/chromadb/chroma.sqlite3
