--- a/src/datapipeline/Dockerfile
+++ b/src/datapipeline/Dockerfile
@@ -23,6 +23,16 @@ RUN set -ex; \
     apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y --no-install-recommends $DEBIAN_PACKAGES && \
+    apt-get install -y lsb-release && \
+    apt-get install -y --no-install-recommends software-properties-common apt-transport-https ca-certificates gnupg2 gnupg-agent curl openssh-client && \
+    curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - && \
+    echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
+    curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add - && \
+    echo "deb http://packages.cloud.google.com/apt gcsfuse-bionic main" > /etc/apt/sources.list.d/gcsfuse.list && \ 
+    apt-get update && \
+    apt-get install -y  gcsfuse && \
+    apt-get install -y --no-install-recommends google-cloud-sdk && \
+    apt-get install -y libnss3 libcurl4 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
     pip install --no-cache-dir --upgrade pip && \
@@ -36,7 +46,9 @@ RUN set -ex; \
 
 
 # Switch to the new user
-USER app
+#USER app
+RUN mkdir -p /mnt/gcs_data && chown app:app /mnt/gcs_data
+
 WORKDIR /app
 
 # Install python packages
