--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,4 +14,5 @@ repos:
     rev: 6.0.0
     hooks:
       - id: flake8
-        files: \.py$ 
+        args: ["--ignore=E203,W503,E402"]
+        files: \.py$
