--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,12 +17,17 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-
-    - name: Build Docker image
-      run: docker build -t test-image -f src/Dockerfile .
+      
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/v2.5.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
       
     - name: Run docker compose
       run: docker-compose -f src/docker-compose.yml up -d
+
+    - name: Build Docker image
+      run: docker build -t test-image -f src/Dockerfile .
 
     - name: Run tests inside the container
       run: |
