--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Run tests inside the container
       run: |
-        docker exec test-image \
+        docker exec test-image-container \
         pipenv run pytest --cov=src \
         --cov-report=xml:/app/coverage/coverage.xml \
         --cov-report=html:/app/coverage/html
