--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,9 +32,8 @@ jobs:
     - name: Run docker compose
       run: docker-compose -f src/docker-compose.yml up -d
 
-    - name: Run tests inside the container
+    - name: Run tests
       run: |
-        docker exec test-image-container \
         pipenv run pytest --cov=src \
         --cov-report=xml:/app/coverage/coverage.xml \
         --cov-report=html:/app/coverage/html
