fix docker compose

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         container_name: test-image-container
         depends_on:
             - chromadb
+        command: ["tail", "-f", "/dev/null"] 
     chromadb:
         image: chromadb/chroma:0.5.5
         container_name: llm-rag-chromadb
