--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         container_name: test-image-container
         volumes:
             - ../src:/app
+            - ../coverage:/app/coverage
         depends_on:
             - chromadb
         command: ["tail", "-f", "/dev/null"] 
