--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         CONTAINER_NAME=$(docker-compose -f src/docker-compose.yml ps -q test-image)
         echo "Container ID: $CONTAINER_NAME"
-        PIPENV_PIPFILE=src/Pipfile pipenv run pytest --cov=src \
+        docker exec $CONTAINER_NAME pipenv run pytest --cov=src \
         --cov-report=xml:/app/coverage/coverage.xml \
         --cov-report=html:/app/coverage/html
         
