--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,12 @@ jobs:
         docker ps
         sleep 10  # Give containers time to start up properly
 
+    - name: Ensure writable directories
+      run: |
+        CONTAINER_NAME=$(docker-compose -f src/docker-compose.yml ps -q test-image)
+        docker exec $CONTAINER_NAME mkdir -p /tmp /app/coverage
+        docker exec $CONTAINER_NAME chmod -R 777 /tmp /app/coverage
+
     - name: Run tests
       run: |
         CONTAINER_NAME=$(docker-compose -f src/docker-compose.yml ps -q test-image)
