--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set permissions for coverage directory
-      run: mkdir -p ${{ github.workspace }}/coverage && chmod -R 777 ${{ github.workspace }}/coverage
+      run: |
+        mkdir -p ${{ github.workspace }}/coverage
+        chmod -R 777 ${{ github.workspace }}/coverage
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -36,24 +38,48 @@ jobs:
       run: |
         CONTAINER_NAME=$(docker-compose -f src/docker-compose.yml ps -q test-image)
         echo "Container ID: $CONTAINER_NAME"
-        docker exec $CONTAINER_NAME pipenv run pytest --cov=src \
-        --cov-report=xml:/app/coverage/coverage.xml \
-        --cov-report=html:/app/coverage/html
+        # Create coverage directory with proper permissions inside container
+        docker exec $CONTAINER_NAME mkdir -p /app/coverage
+        docker exec $CONTAINER_NAME chmod 777 /app/coverage
+        # Run tests with specific coverage configuration
+        docker exec \
+          -e COVERAGE_FILE=/app/coverage/.coverage \
+          -e COVERAGE_RCFILE=/app/coverage/.coveragerc \
+          $CONTAINER_NAME /bin/sh -c \
+          'cd /app && pipenv run pytest \
+          --cov-config=/app/coverage/.coveragerc \
+          --cov=src \
+          --cov-report=xml:/app/coverage/coverage.xml \
+          --cov-report=html:/app/coverage/html'
+
+    - name: Create coverage config
+      run: |
+        CONTAINER_NAME=$(docker-compose -f src/docker-compose.yml ps -q test-image)
+        echo '[run]
+        data_file = /app/coverage/.coverage
+        parallel = True
+        concurrency = multiprocessing
+        source = src
         
+        [report]
+        exclude_lines =
+            pragma: no cover
+            def __repr__
+            raise NotImplementedError
+            if __name__ == .__main__.:
+            pass
+        
+        [html]
+        directory = /app/coverage/html
+        
+        [xml]
+        output = /app/coverage/coverage.xml' | docker exec -i $CONTAINER_NAME tee /app/coverage/.coveragerc
+
     - name: List container contents
       run: |
         CONTAINER_NAME=$(docker-compose -f src/docker-compose.yml ps -q test-image)
         echo "Listing /app/coverage in container..."
         docker exec $CONTAINER_NAME ls -la /app/coverage
-
-    - name: Copy coverage reports from container
-      run: |
-        CONTAINER_NAME=$(docker-compose -f src/docker-compose.yml ps -q test-image)
-        echo "Container name: $CONTAINER_NAME"
-        echo "Copying coverage reports..."
-        docker cp $CONTAINER_NAME:/app/coverage/. ${{ github.workspace }}/coverage/
-        echo "Listing copied files..."
-        ls -la ${{ github.workspace }}/coverage
 
     - name: Upload Coverage Report (XML)
       uses: actions/upload-artifact@v3
