--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,11 +9,6 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
 
-    - name: Set permissions for coverage directory
-      run: |
-        mkdir -p ${{ github.workspace }}/coverage
-        chmod -R 777 ${{ github.workspace }}/coverage
-
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
       
@@ -28,6 +23,11 @@ jobs:
     - name: Build Docker image
       run: docker build -t test-image -f src/Dockerfile .
       
+    - name: Prepare coverage directory
+      run: |
+        mkdir -p ${{ github.workspace }}/coverage
+        sudo chmod -R 777 ${{ github.workspace }}/coverage
+
     - name: Run docker compose
       run: |
         docker-compose -f src/docker-compose.yml up -d
@@ -38,19 +38,20 @@ jobs:
       run: |
         CONTAINER_NAME=$(docker-compose -f src/docker-compose.yml ps -q test-image)
         echo "Container ID: $CONTAINER_NAME"
-        # Create coverage directory with proper permissions inside container
-        docker exec $CONTAINER_NAME mkdir -p /app/coverage
-        docker exec $CONTAINER_NAME chmod 777 /app/coverage
-        # Run tests with specific coverage configuration
+        # Create coverage directory and set permissions
+        docker exec $CONTAINER_NAME bash -c "mkdir -p /app/coverage && chmod 777 /app/coverage"
+        # Run tests
         docker exec \
           -e COVERAGE_FILE=/app/coverage/.coverage \
           -e COVERAGE_RCFILE=/app/coverage/.coveragerc \
-          $CONTAINER_NAME /bin/sh -c \
+          $CONTAINER_NAME bash -c \
           'cd /app && pipenv run pytest \
           --cov-config=/app/coverage/.coveragerc \
           --cov=src \
           --cov-report=xml:/app/coverage/coverage.xml \
           --cov-report=html:/app/coverage/html'
+        # Fix permissions after test run
+        docker exec $CONTAINER_NAME bash -c "chown -R $(id -u):$(id -g) /app/coverage"
 
     - name: Create coverage config
       run: |
@@ -74,12 +75,6 @@ jobs:
         
         [xml]
         output = /app/coverage/coverage.xml' | docker exec -i $CONTAINER_NAME tee /app/coverage/.coveragerc
-
-    - name: List container contents
-      run: |
-        CONTAINER_NAME=$(docker-compose -f src/docker-compose.yml ps -q test-image)
-        echo "Listing /app/coverage in container..."
-        docker exec $CONTAINER_NAME ls -la /app/coverage
 
     - name: Upload Coverage Report (XML)
       uses: actions/upload-artifact@v3
